<resources>
    <string name="app_name">AirFresh</string>
    <string name="all_fault">故障</string>
    <string name="all_open">开启</string>
    <string name="all_close">关闭</string>
    <string name="all_level">级</string>
    <string name="close">关闭</string>
    <string name="all_ok">确认</string>
    <string name="all_sure">确定</string>
    <string name="all_cancel">取消</string>
    <string name="main_page_inner_pm">室内PM2.5</string>
    <string name="main_page_inner_co2">室内CO2</string>
    <string name="main_page_inner_tmp">室内温度</string>
    <string name="main_page_inner_humidity">室内湿度</string>
    <string name="main_page_out_AQI">室外AQI</string>
    <string name="main_page_out_PM">室外PM2.5</string>
    <string name="main_page_out_tmp">室外温度</string>
    <string name="main_page_out_humidity">室外湿度</string>
    <string name="main_page_loading">加载中</string>
    <string name="main_page_air_quality_a">空气优</string>
    <string name="main_page_air_quality_b">空气良</string>
    <string name="main_page_air_quality_c">轻度污染</string>
    <string name="main_page_air_quality_d">中度污染</string>
    <string name="main_page_air_quality_e">重度污染</string>
    <string name="main_page_air_quality_f">严重污染</string>
    <string name="main_page_mode_smart">智能模式</string>
    <string name="main_page_mode_comfortable">舒适模式</string>
    <string name="main_page_mode_sleep">睡眠模式</string>
    <string name="main_page_mode_speed">急速模式</string>
    <string name="main_page_mode_custom">自定义</string>
    <string name="main_page_mode">运行模式</string>
    <string name="main_page_config_net">点击配网</string>
    <string name="main_page_inner_air_quality">室内空气质量</string>
    <string name="main_page_out_air_quality">室外空气质量</string>
    <string name="main_page_co_a">空气清新</string>
    <string name="main_page_co_b">轻度混浊</string>
    <string name="main_page_co_c">中度混浊</string>
    <string name="main_page_humidity_a">干燥</string>
    <string name="main_page_humidity_b">舒适</string>
    <string name="main_page_humidity_c">潮湿</string>
    <string name="main_page_tmp">温度</string>
    <string name="main_page_humidity">湿度</string>
    <string name="main_page_formaldehyde">甲醛</string>
    <string name="main_page_new_gear">新风量</string>
    <string name="main_page_mode_choise">模式选择</string>
    <string name="main_page_temp">摄氏度</string>
    <string name="main_page_relative_humidity">相对湿度</string>
    <string name="reset_des">出厂设置恢复到出厂时的默认状态，如开始界面，待机方式，操作快捷键，定时提醒等功能恢复，清除保存的参数设置。</string>
    <string name="flz_des">空气负离子有“空气维生素”、“空气维他命”的美誉，开启负离子对改善睡眠、改善预防呼吸系统疾病，增强人体免疫力，提高人体自愈力有积极作用。</string>
    <string name="fr_des">开启PTC电辅热可以提高新风净化一体机出风口的空气温度。\n注意：开启PTC电辅热会增加机器功耗。</string>
    <string name="func_page_uvc_tips">开启UVC紫外灯能够有效杀灭空气中的细菌、病毒、芽孢、真菌等有害菌。</string>
    <string name="boot_tip">该设备需要升级</string>
    <string name="open">开启</string>
    <string name="voc_level_a">优</string>
    <string name="voc_level_b">中</string>
    <string name="voc_level_c">差</string>
    <string name="lvwang_chuxiao">初效滤网剩余</string>
    <string name="lvwang_zhongxiao">中效滤网剩余</string>
    <string name="lvwang_huoxing">活性炭滤网剩余</string>
    <string name="lvwang_gaoxiao">高效滤网剩余</string>
    <string name="lvwang_shajun">UV-C杀菌灯剩余</string>
    <string name="detect_updata">检查更新</string>

    <string name="chilrd_lock_page_tips">点击按钮锁定屏幕</string>
    <string name="chilrd_lock_page_tips1">输入错误，解锁失败！请再次尝试</string>
    <string name="chilrd_lock_page_a">生</string>
    <string name="chilrd_lock_page_b">活</string>
    <string name="chilrd_lock_page_c">美</string>
    <string name="chilrd_lock_page_d">好</string>
    <string name="chilrd_lock_page_e">未</string>
    <string name="chilrd_lock_page_f">来</string>
    <string name="chilrd_lock_page_g">健</string>
    <string name="chilrd_lock_page_h">康</string>
    <string name="chilrd_lock_page_i">一</string>
    <string name="chilrd_lock_page_j">马</string>
    <string name="chilrd_lock_page_k">当</string>
    <string name="chilrd_lock_page_l">先</string>
    <string name="chilrd_lock_page_all">秋天临了天空像一块覆美好活健康一马当盖大地的蓝宝石村外那个小池塘睁着碧澄的眼睛凝望着这美好的天色一对小白鹅侧着脑袋欣赏自己映在水里的影子山谷里枫树的叶子知是喝了量的酒红的像一团火似的村前村后的稻子低着头弯着腰在风中默地等待着人们去半空中排着人字形的雁群高兴的唱着歌告人们向天边慢慢飞去</string>
    <string name="dialog_detect_updata">正在检测更新中,请稍候...</string>
    <string name="dialog_install">系统更新中,请稍候...</string>
    <string name="dialog_new_version">检测到新版本</string>
    <string name="dialog_reset_lvwang">确定要重置滤网吗?</string>
    <string name="dialog_reset_factory">确定要恢复出厂设置吗?</string>
    <string name="dialog_updata">升级</string>
    <string name="dialog_disable_wifi">未连接网络</string>

    <string name="dialog_chuxiao_alert">初效滤网即将耗尽</string>
    <string name="dialog_zhongxiao_alert">中效滤网即将耗尽</string>
    <string name="dialog_gaoxiao_alert">高效滤网即将耗尽</string>
    <string name="dialog_huoxing_alert">活性炭滤网即将耗尽</string>
    <string name="dialog_uvc_alert">UVC杀菌灯即将耗尽</string>
    <string name="dialog_alert_tip">为避免二次污染，请及时更换</string>

    <string name="dialog_hcho_alert">甲醛数值超标</string>
    <string name="dialog_ch4_alert">甲烷数值超标</string>
    <string name="dialog_co2_alert">二氧化碳数值超标</string>
    <string name="dialog_voc_alert">VOC数值超标</string>
    <string name="dialog_tip1">请排查污染源，建议</string>
    <string name="dialog_tip2">打开新风，以极速模式运行。</string>

    <string name="dialog_ok">知道了</string>

    <string name="caid_fulz">负离子</string>
    <string name="caid_dings">定时关机</string>
    <string name="caid_gengx">系统更新</string>
    <string name="caid_huifcc">恢复出厂设置</string>
    <string name="caid_liangd">亮度调节</string>
    <string name="caid_liangd1">亮度</string>
    <string name="caid_ptc">PTC辅热</string>
    <string name="caid_shoum">耗材寿命</string>
    <string name="caid_tongs">童锁</string>
    <string name="caid_uvc">UVC杀菌灯</string>
    <string name="caid_wifi">配置WIFI</string>
    <string name="caid_yuy">语言</string>

    <string name="dialog_reseting">系统重置中，请稍后。。。</string>
    <string name="dialog_downloading">正在下载，请耐心等候...</string>
    <string name="diag_current_version">当前：</string>
    <string name="diag_mac">MAC：</string>
    <string name="diag_reset_wifi">重置WI-FI</string>
    <string name="diag_connect">连接</string>
    <string name="diag_input_pwd">输入密码</string>
    <string name="wifi_display_pwd">显示密码</string>
    <string name="wifi_pwd_nw">密码中只能包含数字和字母</string>
    <string name="wifi_pwd_nw8">密码个数少于8位</string>
    <string name="wifi_pwd_nw_null">密码不能为空</string>
    <string name="wifi_disconnected">已断开</string>
    <string name="wifi_disconnecting">断开连接中</string>
    <string name="wifi_connecting">连接中</string>
    <string name="wifi_connected">已连接</string>
    <string name="wifi_unknown">未识别</string>
    <string name="share_wifi_tip">共享网络,无需输入密码</string>
    <string name="wifi_state_connecting">Wifi连接中</string>
    <string name="wifi_connection_success">Wifi连接成功</string>
    <string name="wifi_connection_fail">Wifi连接失败</string>
    <string name="update_frag_install">立即安装</string>
    <string name="update_frag_already_new_version">已是最新版本</string>
    <string name="update_frag_already_old_version">已是最老版本</string>
    <string name="uvc_frag_tip">智能模式下不允许操作UVC杀菌灯</string>

    <string name="user_tips">维修人员安装完成后方可使用此功能</string>
    <string name="is_new_version">已是最新版本</string>
    <string name="level">档</string>
    <string name="zone_chise">切换地址</string>
</resources>
