<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="283dp"
    android:layout_height="287dp"
    >
    <ImageView
        android:id="@+id/iv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/tanc_icon_chongz"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_below="@id/iv"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_reset_lvwang"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:id="@+id/tv_ok"
            android:layout_width="90dp"
            android:layout_height="42dp"
            android:background="@drawable/caid_btn_red"
            android:textColor="@android:color/white"
            android:text="@string/all_sure"/>
        <TextView
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:clickable="true"
            android:id="@+id/tv_cancel"
            android:textColor="@android:color/white"
            android:layout_width="90dp"
            android:layout_height="42dp"
            android:background="@drawable/caid_btn_black"
            android:text="@string/all_cancel"/>
    </LinearLayout>
</RelativeLayout>