<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android_custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="283dp"
    android:layout_height="287dp">

    <LinearLayout
        android:layout_marginTop="65dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>


    <com.mingri.future.airfresh.view.RoundProgressBar
        android:id="@+id/rpb"
        android:layout_marginTop="40dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="50dp"
        android:layout_centerHorizontal="true"
        android_custom:startAngle="270"
        android_custom:progress="-10"
        android_custom:ringColor="@color/color_1f2229"
        android_custom:ringWidth="14dp"
        android_custom:ringProgressColor="@color/color_db3d3e"
        android_custom:textIsDisplayable="false" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="60dp"
        android:layout_marginTop="98dp"
        android:src="@mipmap/tanc_icon_shengy_tis"
        android:layout_height="25dp" />
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rpb"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/dialog_huoxing_alert"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="13dp"
        android:text="@string/dialog_alert_tip"
        android:textColor="@color/color_757e88"
        android:textSize="15sp" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="22dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="103dp"
            android:layout_height="40dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/tanc_btn1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/dialog_ok"
            android:textColor="@android:color/white" />

    </LinearLayout>
</RelativeLayout>